--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
+package-lock.json
 # testing
 /coverage
 
@@ -23,7 +23,7 @@
 # misc
 .DS_Store
 *.pem
-
+Thumbs.db
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# cache files
+.cache/
+.prettiercache
+.turbo/
+
+# Editor and IDE specific files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
